[gd_scene load_steps=8 format=3 uid="uid://dtl7yjdhrgv0k"]

[ext_resource type="Script" path="res://Scripts/main_score.gd" id="1_fp5i8"]
[ext_resource type="Theme" uid="uid://bqko71y06oli4" path="res://Art/Themes/FontTheme.tres" id="2_evwq3"]
[ext_resource type="PackedScene" uid="uid://b361467an5fuf" path="res://Scene/fire.tscn" id="3_4ibx4"]
[ext_resource type="FontFile" uid="uid://bhpv1c7hykjgo" path="res://Art/fonts/Xolonium-Regular.ttf" id="4_slj51"]
[ext_resource type="Material" path="res://Scene/FloatingFont.tres" id="5_fcvxy"]
[ext_resource type="PackedScene" uid="uid://d4amlp74up6fq" path="res://Scene/fireworks.tscn" id="6_0j6el"]
[ext_resource type="PackedScene" uid="uid://chflqfs3ponxi" path="res://Scene/game_over_screen.tscn" id="8_yyfaf"]

[node name="Main_Score" type="CanvasLayer"]
script = ExtResource("1_fp5i8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1930.0
offset_bottom = 1081.0
color = Color(0.45098, 0.568627, 0.439216, 0)

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -313.0
offset_bottom = 148.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 2

[node name="Level" type="Label" parent="ColorRect/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_evwq3")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 70
text = "Level"

[node name="Level_Value" type="Label" parent="ColorRect/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_evwq3")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 120
text = "1"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -494.0
offset_top = -148.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0

[node name="Fire" parent="ColorRect/MarginContainer" instance=ExtResource("3_4ibx4")]
position = Vector2(-677, -704)

[node name="Fire2" parent="ColorRect/MarginContainer" instance=ExtResource("3_4ibx4")]
position = Vector2(-677, -704)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 2

[node name="Score" type="Label" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_evwq3")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 70
text = "Score"

[node name="Score_Value" type="Label" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_evwq3")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("4_slj51")
theme_override_font_sizes/font_size = 120
text = "0"

[node name="TempMessage" type="Label" parent="ColorRect"]
material = ExtResource("5_fcvxy")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 97.0
offset_right = 20.0
offset_bottom = 217.0
grow_horizontal = 2
theme = ExtResource("2_evwq3")
theme_override_colors/font_color = Color(0.956863, 0.623529, 0.0980392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fireworks" parent="ColorRect" instance=ExtResource("6_0j6el")]
visible = false
position = Vector2(265, -600)

[node name="GameOverScreen" parent="." instance=ExtResource("8_yyfaf")]
visible = false
offset_left = 963.0
offset_top = 549.0
offset_right = 963.0
offset_bottom = 549.0

[node name="scoreTextTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="incrementScore" type="Timer" parent="."]
wait_time = 0.001

[connection signal="timeout" from="scoreTextTimer" to="." method="_on_score_text_timer_timeout"]
[connection signal="timeout" from="incrementScore" to="." method="_on_increment_score_timeout"]
